# fraud_detection

./: .env  .gitignore  HOWTO.md  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  subscriber.py
cloud_storage/: __init__.py  contract.py  local_cloud.py  registry.py
data/: bank_customer_complaints.ipynb  support.csv
docs/: scenario.md
event_handler/: event_handler.py
localdev/: pubsub_emulator_tools.py  pubsub_subscriber.py
localdev/mcp/mcp_pii_server/: main.py  pii_classify.py  pyproject.toml
models/: complaints_classifier.joblib
storage/: contract.py  postgres.py
tests/storage/: test_postgres.py
worker/: worker.py
workflow/: ingestion.py
workflow/activities/: download.py
