[project]
name = "file-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-pubsub>=2.31.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.1",
    "localcloud>=0.0.1",
    "mcp>=1.27.1",
    "pandas>=3.0.3",
    "presidio-analyzer>=2.2.362",
    "scikit-learn>=1.8.0",
    "temporalio>=1.27.0",
]

[tool.uv.workspace]
members = [
    "localdev/mcp_pii_server/mcp_pii_server",
]
